--- a/Testing_LR2_tests/Testing_LR2_tests.csproj
+++ b/Testing_LR2_tests/Testing_LR2_tests.csproj
@@ -22,4 +22,8 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Testing_LR2\Testing_LR2.csproj" />
+    </ItemGroup>
+
 </Project>
